refactor/#92 stream관련 코드 간결화